css/imports/_ui.css
/* -------------------------------------------- */
/*                    Header                    */
/* -------------------------------------------- */

header {
  position: sticky;
  top: 0;
  min-height: var(--height-header);
  background-color: var(--clr-deep-black);
  z-index: 1;
}

.header__nav,
.header__nav::before {
  position: fixed;
  top: var(--height-header);
  height: 100vh;
}

.header__nav {
  right: -100%;
  width: 50%;
  padding-block: var(--space-1-5);
  transition: right var(--tr-ease-in-out);
  background-color: var(--clr-gray);
}

.header__nav::before {
  content: "";
  left: 0;
  width: 100%;
  opacity: 0;
  visibility: hidden;
  transition: all var(--tr-ease-in-out);
  background-color: var(--clr-medium-shadow);
  z-index: -1;
}

.header__nav-open {
  right: 0;
}

.header__nav-open::before {
  opacity: 1;
  visibility: visible;
}

/* -------------------------------------------- */
/*                  Page Hero's                 */
/* -------------------------------------------- */

.hero {
  height: 300px;
  color: var(--clr-white);
}

.home-hero {
  height: auto;
  background-color: var(--clr-black);
}

.blog-hero {
  background: linear-gradient(var(--clr-medium-shadow), var(--clr-medium-shadow)), url("/images/blog/blog-hero.jpg") center / cover;
}

.about-hero {
  background: linear-gradient(var(--clr-medium-shadow), var(--clr-medium-shadow)), url("/images/about/about-hero.jpg") center / cover;
}

.contact-hero {
  background: linear-gradient(var(--clr-medium-shadow), var(--clr-medium-shadow)), url("/images/contact/contact-hero.jpg") center / cover;
}

.hero__title {
  font-size: var(--fs-xxxl);
}

.home-hero__image {
  height: 400px;
  mask-image: linear-gradient(var(--gradient-direction, to bottom), var(--clr-black) 0%, var(--clr-dark-shadow) 60%, transparent 100%);
}

.home-hero__content {
  padding: var(--space-3) var(--space-1);
  justify-self: center;
}

.home-hero__body {
  max-width: 360px;
}

/* -------------------------------------------- */
/*                    Footer                    */
/* -------------------------------------------- */

footer {
  margin-top: var(--space-2-5);
}

/* Footer Top */

.footer__top .underline {
  text-transform: lowercase;
  text-decoration-color: var(--clr-black);
}

.footer__instagram {
  grid-template: 1fr repeat(7, 0) / repeat(auto-fit, minmax(150px, 1fr));
}

.footer__instagram .bxl-instagram {
  inset: 0;
  opacity: 0;
  color: var(--clr-white);
  transition: opacity var(--tr-ease-in-out);
  background-color: var(--clr-medium-shadow);
}

.footer__instagram__link:is(:hover, :focus) .bxl-instagram {
  opacity: 1;
}

/* Footer Bottom */

.footer__bottom {
  color: var(--clr-white);
  border-top: 5px solid var(--clr-light-orange);
  background: linear-gradient(to top, var(--clr-deep-black), var(--clr-dark-gray));
}

.footer__container {
  padding-block: var(--space-2) var(--space-1);
}

.footer__nav {
  margin-block: var(--space-0-5);
}

/* -------------------------------------------- */
/*                   Sections                   */
/* -------------------------------------------- */

/* --------------- Featured Post -------------- */

.featured-post {
  padding-block: var(--space-3);
  background-color: var(--clr-white);
}

.featured-post__article {
  grid-template-columns: repeat(auto-fit, minmax(min(300px, 100%), 1fr));
}

.featured-post__article__meta {
  --bullet-space: var(--space-0-3);
}

.featured-post__article__image {
  height: auto;
  max-height: 320px;
}

.featured-post__article__body {
  --max-lines: 3;
}

/* ---------------- Newsletter ---------------- */

.newsletter {
  --wrap-style: wrap-reverse;
  min-height: 420px;
}

.newsletter > div {
  flex: 1 1 300px;
}

/* -------------- Blog Posts List ------------- */

.blog-posts__list {
  grid-template-columns: repeat(auto-fill, minmax(min(420px, 100%), 1fr));
}

.blog-posts__form > fieldset {
  flex-basis: 250px;
}

.blog-posts__btn-show-more {
  margin-inline: auto;
}

/* ----------------- Blog Post ---------------- */

.blog-post__content {
  margin-top: -8rem;
  flex: 1 1 350px;
}

.blog-post__meta {
  max-height: 24px;
  --bullet-space: var(--space-0-3);
}

/* Blog Post Article */

.blog-post__article p:first-of-type {
  font-weight: var(--fw-bold);
}

.blog-post__article__image {
  max-height: 400px;
}

/* Blog Post Comments */

.blog-post__comments__list {
  --flow-space: var(--space-2);
}

.blog-post__comment__body {
  --flow-space: var(--space-0-5);
}

/* Blog Post Aside */

.blog-post__aside {
  position: sticky;
  top: calc(var(--height-header) + var(--space-1));
  min-width: min(350px, 100%);
  height: 100%;
  flex: 1 1 50px;
}

.blog-post__popular-posts,
.blog-post__search {
  padding: var(--space-1-5) var(--space-2);
}

.blog-post__popular-post__image {
  max-width: 75px;
}

.blog-post__search__container {
  margin-bottom: calc(var(--space-1) * -1);
}

.blog-post__search__btn {
  flex-basis: 50px;
}

/* ----------- Journey Behind & FAQ ----------- */

.journey-behind__image-container,
.faq__content {
  flex: 1 1 250px;
}

.journey-behind__content,
.faq__accordions {
  flex: 1 1 400px;
}

.faq__accordions {
  min-height: 350px;
  place-content: center;
}

/* ----------------- Reach Out ---------------- */

.reach-out {
  grid-template: 1fr 0 / repeat(auto-fit, minmax(min(330px, 100%), 1fr));
  gap: 0 var(--space-2);
}

/* -------------- Connect With Me ------------- */

.connect-with-me__content {
  flex: 1 1 25ch;
}

